# distributed-gpu-monitor

./: .gitignore  BUILDING.md  CMakeLists.txt  azure-pipelines.yml
client/: CMakeLists.txt
client/debian/: README.Debian  README.source  changelog  control  debhelper-build-stamp  dgpumon.cron.d.ex  dgpumon.doc-base.EX  dgpumon.postinst.debhelper  dgpumon.postrm.debhelper  dgpumon.prerm.debhelper  dgpumon.substvars  files  manpage.1  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
client/manpage/: dgpumon.in
client/src/: CMakeLists.txt  dgpumon.c  extract_gpuinfo.c  nvtop.c
client/systemd/: dgpumon.service
cmake/modules/: FindCZMQ.cmake  FindMsgpack.cmake  FindZMQ.cmake
frontend/: .env  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css  setupProxy.js
monitor-frontend/: package.json
monitor-server/: README.md  mix.exs
monitor-server/config/: config.exs  dev.exs  prod.exs  test.exs
monitor-server/lib/: monitor_server_web.ex
monitor-server/test/: test_helper.exs
monitor_client/src/: nvtop.c
monitor_frontend/: package.json
monitor_server/: README.md  __main__.py  mix.exs
monitor_server/config/: config.exs  dev.exs  test.exs
monitor_server/lib/: monitor_server.ex
monitor_server/static/: asset-manifest.json  precache-manifest.85e9f17f1392cc9c233d8a3f7cfb23eb.js
server/: __main__.py  db.py  routes.py  users_handler.py  zmq_poller.py
server/config/: servers.yaml
server/sampling/: __init__.py  db_sampler.py  (+1 more)
src/: CMakeLists.txt  nvtop.c
(+155 files in other folders)
